# apcore-cli-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
examples/extensions/math/add/: module.json  run.sh
examples/extensions/math/multiply/: module.json  run.sh
examples/extensions/sysutil/disk/: module.json  run.sh
examples/extensions/sysutil/env/: module.json  run.sh
examples/extensions/sysutil/info/: module.json  run.sh
examples/extensions/text/reverse/: module.json  run.sh
examples/extensions/text/upper/: module.json  run.sh
examples/extensions/text/wordcount/: module.json  run.sh
planning/: overview.md
planning/approval-gate/: state.json
planning/config-resolver/: state.json
planning/config-resolver/tasks/: models.md  tests.md
planning/core-dispatcher/: state.json
planning/discovery/: plan.md  state.json
planning/dispatch-integration/: feature-spec.md  overview.md  plan.md  state.json
planning/dispatch-integration/tasks/: dispatch-wiring.md  exec-subcommand.md  resolve-refs-signature.md  test-cleanup.md  validate-extensions-result.md
planning/output-formatter/: plan.md  state.json
planning/schema-parser/: plan.md  state.json
planning/security/: state.json
planning/shell-integration/: plan.md  state.json
src/: _sandbox_runner.rs  approval.rs  cli.rs  config.rs  discovery.rs  exposure.rs  fs_discoverer.rs  init_cmd.rs  lib.rs  main.rs  output.rs  ref_resolver.rs  schema_parser.rs  shell.rs  strategy.rs  system_cmd.rs  validate.rs
src/security/: audit.rs  auth.rs  config_encryptor.rs  mod.rs  sandbox.rs
tests/: approval_integration.rs  conformance_apcli_visibility.rs  test_approval.rs  test_cli.rs  test_config.rs  test_discovery.rs  test_e2e.rs  test_exposure.rs  test_fs_discoverer.rs  test_integration.rs  test_output.rs  test_ref_resolver.rs  test_schema_parser.rs  test_shell.rs  test_strategy.rs  test_system_cmd.rs  test_validate.rs
tests/security/: test_audit.rs  test_auth.rs  test_config_encryptor.rs  test_sandbox.rs
