[package]
name = "apcore-cli"
version = "0.2.0"
edition = "2021"
description = "Command-line interface for apcore modules"
license = "Apache-2.0"
readme = "README.md"
authors = ["aipartnerup <tercel.yi@gmail.com>"]
homepage = "https://aipartnerup.com"
repository = "https://github.com/aipartnerup/apcore-cli-rust"
documentation = "https://apcore.aipartnerup.com/"
keywords = ["ai", "llm", "module", "cli", "schema"]
categories = ["command-line-utilities", "api-bindings"]

[[bin]]
name = "apcore-cli"
path = "src/main.rs"

[lib]
name = "apcore_cli"
path = "src/lib.rs"

[dependencies]
apcore = "0.13.0"
clap = { version = "4", features = ["derive", "env", "string"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
comfy-table = "6"
keyring = "2"
aes-gcm = "0.10"
sha2 = "0.10"
pbkdf2 = "0.12"
dirs = "5"
anyhow = "1"
thiserror = "1"
clap_complete = "4"
base64 = "0.22"
gethostname = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"

[dev-dependencies]
tokio-test = "0.4"
