[package]
name = "apcore-cli"
version = "0.5.0"
edition = "2021"
description = "Command-line interface for apcore modules"
license = "Apache-2.0"
readme = "README.md"
authors = ["aiperceivable <team@aiperceivable.com>"]
homepage = "https://aiperceivable.com"
repository = "https://github.com/aiperceivable/apcore-cli-rust"
documentation = "https://apcore.aiperceivable.com/"
keywords = ["ai", "llm", "module", "cli", "schema"]
categories = ["command-line-utilities", "api-bindings"]

[[bin]]
name = "apcore-cli"
path = "src/main.rs"

[lib]
name = "apcore_cli"
path = "src/lib.rs"

[dependencies]
apcore = "=0.15.1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env", "string"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "io-std", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
comfy-table = "6"
keyring = "2"
aes-gcm = "0.10"
sha2 = "0.10"
pbkdf2 = "0.12"
dirs = "5"
anyhow = "1"
thiserror = "1"
clap_complete = "4"
base64 = "0.22"
gethostname = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
apcore-toolkit = { version = ">=0.4", optional = true }

[features]
default = []
test-support = []
toolkit = ["dep:apcore-toolkit"]

[dev-dependencies]
tokio-test = "0.4"
apcore-cli = { path = ".", features = ["test-support"] }

[[test]]
name = "approval_integration"
path = "tests/approval_integration.rs"

[[test]]
name = "test_audit"
path = "tests/security/test_audit.rs"

[[test]]
name = "test_auth"
path = "tests/security/test_auth.rs"

[[test]]
name = "test_config_encryptor"
path = "tests/security/test_config_encryptor.rs"

[[test]]
name = "test_sandbox"
path = "tests/security/test_sandbox.rs"
